--- a/style.css
+++ b/style.css
@@ -4,3 +4,11 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+.container {
+  width: 100%;
+  height: 100vh;
+  background: #3c5077;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
