--- a/style.css
+++ b/style.css
@@ -35,3 +35,21 @@
   padding: 0 30px 30px;
   color: #333;
 }
+.popup h2 {
+  font-size" 38px;
+  font-weight:500;
+  margin: 30px 0 10px;
+}
+
+.popup button {
+  width: 100%;
+  margin-top:50px;
+  padding: 10px 0;
+  background: #6fd649;
+  color: #fff;
+  border: 0;
+  outline: none;
+  font-size: 18px;
+  border-size: 4px;
+  cursor: pointer;
+}
