--- a/style.css
+++ b/style.css
@@ -28,12 +28,13 @@
   backgroung: #fff;
   border-radius: 6px;
   position: absolute:
-  top: 50%;
+  top: 0;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%) scale(0.1);
   text-align: center;
   padding: 0 30px 30px;
   color: #333;
+  visibility: hidden;
 }
 .popup h2 {
   font-size" 38px;
